# dsplang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
examples/: Makefile
examples/basic/: lib.c  lib.dsp  main.c
examples/constant/: lib.c  lib.dsp  main.c
examples/playground/: lib.c  lib.dsp  main.c
include/: CMakeLists.txt
include/dsplang/Conversion/: CMakeLists.txt
include/dsplang/Conversion/ArithToHLHVX/: ArithToHLHVX.h  ArithToHLHVX.pdll  CMakeLists.txt  Passes.h  Passes.td
include/dsplang/Conversion/DsplangToAffine/: Passes.h
include/dsplang/Conversion/DsplangToLLVM/: Passes.h
include/dsplang/Conversion/HLHVXToLLHVX/: CMakeLists.txt  HLHVXToLLHVX.h  HLHVXToLLHVX.pdll  HLHVXToLLHVXGen.pdll  Passes.h  Passes.td
include/dsplang/Dialect/Dsplang/: DsplangDialect.h
include/dsplang/Dialect/Dsplang/IR/: CMakeLists.txt  Dsplang.td  DsplangCombine.td  DsplangOps.td
include/dsplang/Dialect/HLHVX/: HLHVXDialect.h
include/dsplang/Dialect/HLHVX/IR/: CMakeLists.txt  HLHVX.td  HLHVXOps.td  HLHVXOpsGen.td  HLHVXTypes.td
include/dsplang/Dialect/LLHVX/: LLHVXDialect.h
include/dsplang/Dialect/LLHVX/IR/: CMakeLists.txt  LLHVX.td  LLHVXIntrOps.td  LLHVXIntrOpsGen.td  LLHVXOps.td
include/dsplang/Language/: AST.h  Lexer.h  MLIRGen.h  Parser.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/ArithToHLHVX/: CMakeLists.txt  LowerArithToHLHVXOps.cpp
lib/Conversion/DsplangToAffine/: AffineSelectiveVectorizePass.cpp  CMakeLists.txt  LowerDsplangToAffine.cpp  ShapeInferencePass.cpp
lib/Conversion/DsplangToLLVM/: CMakeLists.txt  LowerDsplangToLLVM.cpp
lib/Conversion/HLHVXToLLHVX/: CMakeLists.txt  LowerHLHVXToLLHVX.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Dsplang/: CMakeLists.txt  DsplangOps.cpp
lib/Dialect/Dsplang/Combine/: CMakeLists.txt  DsplangCombine.cpp
lib/Dialect/HLHVX/: CMakeLists.txt  HLHVXOps.cpp
lib/Dialect/LLHVX/: CMakeLists.txt  LLHVXOps.cpp
lib/Language/: AST.cpp  CMakeLists.txt  MLIRGen.cpp
scripts/: gen_hvxops.py
setup/: hexagon-env.yaml  hexagon-toolchain.patch
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/HLHVXToLLHVX/: hlhvx.mlir  regressions.mlir
tools/: CMakeLists.txt
tools/dsplangc/: CMakeLists.txt  dsplangc.cpp
tools/dsplangc-opt/: CMakeLists.txt  dsplangc-opt.cpp
tools/llhvx-translate/: CMakeLists.txt  llhvx-translate.cpp
